# haskell-qrencode

./: .gitignore  LICENSE  haskell-qrencode.cabal
src/Data/: QRCode.hsc
